--- a/index.html
+++ b/index.html
@@ -175,34 +175,8 @@
 			<img src="image/pic_1.jpg" alt="" data-scroll data-scroll-speed="3">
 		</div>
 		<div class="area2">
-			<div data-scroll data-scroll-speed="2">
-				<img src="image/pic_2.jpg" alt="">
-			</div>
 			<div class="area2_txt" data-scroll data-scroll-speed="1">
-				<div>
-					<h4>大稻埕時空隧道-文化導覽</h4>
-					<p>您可以漫步在迪化街、或在慈聖宮前的小吃攤品味在地美食，踏入巷弄裡逛逛各具風格的選物文創小店，坐在典雅懷古的街屋中喝杯咖啡享受悠閒時光，想體會臺北傳統生活，來臺北絕對不能錯過大稻埕！</p>
-				</div>
-				<ul >
-					<li>
-						<p>創業基地</p>
-						<p>78 м²<br><span>時空隧道臺北大稻埕時空隧道臺北大稻埕</span></p>
-						<p>179,8 м²<br><span>時空隧道臺北大稻埕</span></p>
-					</li>
-					<li>
-						<p>文化基地</p>
-						<p>78 м²<br><span>時空隧道臺北大稻埕時空隧道臺北大稻埕</span></p>
-						<p>179,8 м²<br><span>時空隧道臺北大稻埕</span></p>
-					</li>
-					<li>
-						<p>時光隧道</p>
-						<p>78 м²<br><span>時空隧道臺北大稻埕時空隧道臺北大稻埕</span></p>
-						<p>179,8 м²<br><span>時空隧道臺北大稻埕</span></p>
-					</li>
-				</ul>
-				<a class="area_btn_b btn ga_btn" data-types="首頁_文化導覽>VR體驗" href="street_vr/index.html">
-					VR 體驗
-				</a>
+				<img src="../image/1920台北霞海城隍廟爆炸圖精稿插畫-final-966x2600.webp" alt="">
 			</div>
 		</div>
 	</section>
